# NIP-Manager

./: CMakeLists.txt  README.md  test.json
NIP-Manager/: App.config  Form1.Designer.cs  Form1.cs  Main.Designer.cs  Main.settings  Master.Designer.cs  Master.cs  Master.resx  NIP-Manager.csproj  NIP-Manager.sln  Program.cs
Published/: NIP-Manager.application  Publish.html
Published/Application Files/NIP-Manager_0_0_0_0/: NIP-Manager.dll.deploy  NIP-Manager.dll.manifest
Published/Application Files/NIP-Manager_0_0_2_0/: NIP-Manager.deps.json.deploy  NIP-Manager.dll.deploy  NIP-Manager.dll.manifest
Published/Application Files/NIP-Manager_0_0_2_1/: Launcher.exe.deploy  NIP-Manager.deps.json.deploy  NIP-Manager.dll.config.deploy  NIP-Manager.dll.deploy  NIP-Manager.dll.manifest  NIP-Manager.exe.deploy
Published/Application Files/NIP-Manager_0_0_2_2/: NIP-Manager.dll.deploy  NIP-Manager.dll.manifest  NIP-Manager.exe.deploy
include/: cloud.h  console.h  core.h  download.h  extractor.h  savefile.h
src/: cloud.cpp  console.cpp  console.h  core.h  download.cpp  download.h  extractor.cpp  extractor.h  main.cpp  main.h  pch.h  savefile.cpp
